--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 :root {
   --purple-color: #7342D6;
-  --nav-height: 100px;
+  --nav-height: 92px;
   --footer-height: 300px;
 }
 
@@ -38,8 +38,8 @@ input, select, textarea, button {
   margin: 0 auto;
 	width: 100%;
   max-width: 1200px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 5%;
+  padding-left: 5%;
 }
 
 .row {
@@ -54,7 +54,7 @@ input, select, textarea, button {
 	width: 100%;
 	min-height: 1px;
 	padding-right: 16px;
-	padding-left: 16px
+	padding-left: 16px;
 }
 
 .fc {
