--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -50,7 +50,6 @@
 
 .book__img--skeleton {
   height: 360px;
-  width: 250px;
   background-color: rgb(204, 204, 204);
   border-radius: 2px;
 }
@@ -64,18 +63,17 @@
 }
 
 .book__title--skeleton {
-  width: 100%;
   height: 22px;
 }
 
 .book__rating--skeleton {
   width: 40%;
-  height: 19px;
+  height: 18px;
 }
 
 .book__price--skeleton {
   width: 70%;
-  height: 19px;
+  height: 18px;
 }
 
 /* 
@@ -85,13 +83,15 @@
 */
 
 @media screen and (max-width: 1200px) {
-  .book__img--wrapper {
+  .book__img--wrapper,
+  .book__img--skeleton {
     height: 30vw;
   }
 }
 
 @media screen and (max-width: 576px) {
-  .book__img--wrapper {
+  .book__img--wrapper,
+  .book__img--skeleton {
     height: 40vw;
   }
 
@@ -111,7 +111,8 @@
     margin-bottom: -20px;
   }
 
-  .book__img--wrapper {
+  .book__img--wrapper,
+  .book__img--skeleton {
     height: 50vw;
   }
 
