--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -3,42 +3,43 @@
   flex-direction: column;
 }
 
-.book__img--wrapper {
-  height: 360px;
-  display: flex;
-  align-items: center;
-}
-
 .book__img {
   height: 100%;
   width: 100%;
   object-fit: contain;
+  object-position: left bottom;
   transition: transform 300ms ease;
 }
 
+.book__img--wrapper,
+.book__img--skeleton {
+  height: 280px;
+}
+
 .book__img:hover {
-  transform: scale(1.03)
+  transform: scale(1.03);
 }
 
 .book__info {
-  margin-top: 20px;
+  margin-top: 12px;
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
 .book__title {
-  font-size: 1.25rem;
+  font-size: 18px;
 }
 
 .book__rating--wrapper {
   color: #fabf2a;
-  margin: 8px 0;
+  margin-top: 4px;
+  margin-bottom: 8px;
 }
 
 .book__price--strikethrough {
   text-decoration: line-through;
-  color: #BFBFBF;
+  color: #bfbfbf;
   margin-right: 6px;
 }
 
@@ -59,7 +60,7 @@
 .book__price--skeleton {
   background-color: rgb(223, 223, 223);
   margin-top: 8px;
-  border-radius: 1px
+  border-radius: 1px;
 }
 
 .book__title--skeleton {
@@ -85,14 +86,18 @@
 @media screen and (max-width: 1200px) {
   .book__img--wrapper,
   .book__img--skeleton {
-    height: 30vw;
+    height: 25vw;
   }
 }
 
 @media screen and (max-width: 576px) {
   .book__img--wrapper,
   .book__img--skeleton {
-    height: 40vw;
+    height: 50vw;
+  }
+
+  .book__img {
+    object-position: bottom;
   }
 
   .book__info {
@@ -101,30 +106,17 @@
   }
 
   .book__title {
-    padding-left: 20px;
-    padding-right: 20px;
+    max-width: 200px;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .books__container {
+  .books-grid {
     margin-bottom: -20px;
   }
 
   .book__img--wrapper,
   .book__img--skeleton {
-    height: 50vw;
-  }
-
-  .book {
-    margin-bottom: 20px;
-  }
-
-  .book__title {
-    font-size: 18px;
-  }
-
-  .book__info {
-    margin-top: 12px;
+    height: 55vw;
   }
 }
