adjust sizing and spacing of items on bookInfo page

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -87,26 +87,24 @@ nav .fa-bars {
   border-radius: 0;
   padding: 40px;
   height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .nav-modal ul {
   height: 100%;
-  position: relative;
+  max-height: 260px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   list-style-type: none;
   color: #fff;
 }
 
-.nav-modal li {
-  margin: 24px 0;
-}
-
 .nav-modal .fa-x-wrapper {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 48px;
+  top: 48px;
   margin: 0;
 }
 
@@ -143,5 +141,18 @@ nav .fa-bars {
 @media screen and (max-width: 480px) {
   .nav__logo {
     width: 120px;
+  }
+}
+
+@media screen and (max-height: 576px) {
+  .nav-modal ul {
+    max-height: none;
+  }
+
+  .nav-modal .fa-x-wrapper {
+    position: relative;
+    right: 0;
+    top: 0;
+    margin-left: auto;
   }
 }
