--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -85,8 +85,8 @@ nav .fa-bars {
 .nav-modal {
   background-color: var(--purple-color);
   border-radius: 0;
-  padding: 40px;
-  height: 100vh;
+  padding: 32px;
+  height: 100%;
   display: flex;
   align-items: center;
 }
@@ -103,8 +103,8 @@ nav .fa-bars {
 
 .nav-modal .fa-x-wrapper {
   position: absolute;
-  right: 48px;
-  top: 48px;
+  right: 32px;
+  top: 32px;
   margin: 0;
 }
 
