--- a/src/pages/Home/Landing.css
+++ b/src/pages/Home/Landing.css
@@ -10,7 +10,7 @@
 }
 
 #landing .col {
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .header__text {
@@ -29,7 +29,8 @@
 }
 
 .header__img {
-  height: 40vh;
+  margin-top: 32px;
+  max-height: 300px;
   width: 100%;
   object-fit: contain;
 }
