--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   backdrop-filter: blur(5px) brightness(60%);
   z-index: 100;
   display: flex;
