add button color change on add to cart to confirm

--- a/src/pages/BookInfo/BookInfo.css
+++ b/src/pages/BookInfo/BookInfo.css
@@ -64,6 +64,12 @@
 
 .book-selected .btn {
   margin-top: 20px;
+  transition: background-color 500ms ease;
+}
+
+.book-selected .btn.confirm {
+  background-color: #0496FF;
+  transition: background-color 300ms ease;
 }
 
 .book-selected .para {
