--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -91,6 +91,18 @@ nav .fa-bars {
   align-items: center;
 }
 
+.fade-in .nav-modal {
+  /* slide in animation */
+  transform: translateX(100%); 
+  transition: transform 300ms ease-in-out;
+}
+
+.fade-in.visible .nav-modal {
+  /* slide in animation */
+  transform: translateX(0); 
+  transition: transform 300ms ease-in-out;
+}
+
 .nav-modal ul {
   height: 100%;
   max-height: 260px;
