--- a/src/css/components/Footer.css
+++ b/src/css/components/Footer.css
@@ -3,7 +3,7 @@
 }
 
 #footer > .container {
-  height: var(--footer-height);
+  height: 220px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,15 +25,4 @@
 .footer__logo {
   width: 160px;
   filter: grayscale(1) brightness(0) invert(1); /* turns to black then inverts colors */
-}
-
-@media screen and (max-width: 768px) {
-  :root {
-    --footer-height: 240px !important;
-  }
-}
-@media screen and (max-width: 576px) {
-  :root {
-    --footer-height: 220px !important;
-  }
 }
