--- a/src/css/components/Modal.css
+++ b/src/css/components/Modal.css
@@ -25,7 +25,7 @@
 .modal {
   border-radius: 8px;
   background-color: #fff;
-  color: var(--purple-color);
+  color: #7342d6;
   padding: 24px;
   position: relative;
   z-index: 102;
