--- a/src/css/components/Nav.css
+++ b/src/css/components/Nav.css
@@ -1,5 +1,5 @@
 nav .container {
-  height: var(--nav-height);
+  height: 92px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -33,8 +33,8 @@ nav .fa-cart-shopping {
 }
 
 nav a.primary {
-  border: 2px solid var(--purple-color);
-  color: var(--purple-color);
+  border: 2px solid #7342d6;
+  color: #7342d6;
   border-radius: 4px;
 }
 
@@ -82,7 +82,7 @@ nav .fa-bars {
 }
 
 .nav-modal {
-  background-color: var(--purple-color);
+  background-color: #7342d6;
   border-radius: 0;
   padding: 40px;
   height: 100%;
