--- a/src/css/pages/Cart/Cart.css
+++ b/src/css/pages/Cart/Cart.css
@@ -1,5 +1,5 @@
 #cart {
-  min-height: calc(100vh - var(--nav-height) - var(--footer-height));
+  min-height: calc(100vh - 92px - 220px);
 }
 
 .expand-vertically {
@@ -25,7 +25,7 @@
   margin-top: 16px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  background-color: #7342D6;
+  background-color: #7342d6;
   color: white;
   font-size: 1.1rem;
   padding: 12px 16px;
@@ -234,7 +234,7 @@
 
 .confirm-remove-modal .remove-btn {
   font-size: 1rem;
-  background-color: #C14953;
+  background-color: #c14953;
 }
 
 .mobile-only {
