--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,10 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+@use 'variables';
 
-:root {
-  --purple-color: #7342D6;
-  --nav-height: 92px;
-  --footer-height: 300px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 * {
   margin: 0;
@@ -24,7 +20,10 @@ button {
   cursor: pointer;
 }
 
-input, select, textarea, button {
+input,
+select,
+textarea,
+button {
   font-family: inherit;
 }
 
@@ -36,25 +35,25 @@ input, select, textarea, button {
 
 .container {
   margin: 0 auto;
-	width: 100%;
+  width: 100%;
   max-width: 1200px;
   padding-right: 5%;
   padding-left: 5%;
 }
 
 .row {
-	display: flex;
-	flex-wrap: wrap;
-	margin-right: -16px;
-	margin-left: -16px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -16px;
+  margin-left: -16px;
 }
 
 .col {
-	position: relative;
-	width: 100%;
-	min-height: 1px;
-	padding-right: 16px;
-	padding-left: 16px;
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 16px;
+  padding-left: 16px;
 }
 
 .fc {
@@ -91,7 +90,7 @@ input, select, textarea, button {
 */
 
 .btn {
-  background-color: var(--purple-color);
+  background-color: variables.$purple-color;
   padding: 12px 24px;
   color: white;
   border: none;
@@ -110,5 +109,5 @@ input, select, textarea, button {
 }
 
 .text--purple {
-  color: var(--purple-color);
+  color: variables.$purple-color;
 }
