--- a/src/scss/components/BooksGrid.scss
+++ b/src/scss/components/BooksGrid.scss
@@ -1,30 +1,28 @@
-:root {
-  --books-per-row: 4;
-  --book-horizontal-padding: 24px;
-  --book-vertical-padding: 24px;
-}
+$books-per-row: 4;
+$book-horizontal-padding: 24px;
+$book-vertical-padding: 24px;
 
 .books-grid {
   display: flex;
   flex-wrap: wrap;
   /* to negate .book__wrapper gutters on edges of books-grid */
-  margin: calc(-1 * var(--book-vertical-padding)) calc(-1 * var(--book-horizontal-padding));
+  margin: calc(-1 * $book-horizontal-padding) calc(-1 * $book-horizontal-padding);
 }
 
 .book__wrapper {
-  padding: var(--book-vertical-padding) var(--book-horizontal-padding);
-  width: calc(100% / var(--books-per-row));
+  padding: $book-horizontal-padding $book-horizontal-padding;
+  width: calc(100% / $books-per-row);
 }
 
 @media screen and (max-width: 768px) {
   :root {
-    --book-vertical-padding: 16px;
-    --book-horizontal-padding: 8px;
+    $book-vertical-padding: 16px;
+    $book-horizontal-padding: 8px;
   }
 }
 
 @media screen and (max-width: 576px) {
   :root {
-    --books-per-row: 2;
+    $books-per-row: 2;
   }
 }
