--- a/src/scss/components/Nav.scss
+++ b/src/scss/components/Nav.scss
@@ -1,5 +1,7 @@
+@use '../variables';
+
 nav .container {
-  height: var(--nav-height);
+  height: variables.$nav-height;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -33,8 +35,8 @@ nav .fa-cart-shopping {
 }
 
 nav a.primary {
-  border: 2px solid var(--purple-color);
-  color: var(--purple-color);
+  border: 2px solid variables.$purple-color;
+  color: variables.$purple-color;
   border-radius: 4px;
 }
 
@@ -83,7 +85,7 @@ nav .fa-bars {
 }
 
 .nav-modal {
-  background-color: var(--purple-color);
+  background-color: variables.$purple-color;
   border-radius: 0;
   padding: 40px;
   height: 100%;
@@ -93,13 +95,13 @@ nav .fa-bars {
 
 .fade-in .nav-modal {
   /* slide in animation */
-  transform: translateX(100%); 
+  transform: translateX(100%);
   transition: transform 300ms ease-in-out;
 }
 
 .fade-in.visible .nav-modal {
   /* slide in animation */
-  transform: translateX(0); 
+  transform: translateX(0);
   transition: transform 300ms ease-in-out;
 }
 
