--- a/src/css/components/Book.css
+++ b/src/css/components/Book.css
@@ -1,79 +1,65 @@
+.book__img--wrapper,
+.book__skeleton--img {
+  height: 280px;
+}
+
 .book {
   display: flex;
   flex-direction: column;
 }
-
-.book__img {
+.book__img--wrapper img {
   height: 100%;
   width: 100%;
   object-fit: contain;
   object-position: left bottom;
   transition: transform 300ms ease;
 }
-
-.book__img--wrapper,
-.book__img--skeleton {
-  height: 280px;
-}
-
-.book__img:hover {
+.book__img--wrapper img:hover {
   transform: scale(1.03);
 }
-
 .book__info {
   margin-top: 12px;
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
 }
-
 .book__title {
   font-size: 18px;
 }
-
-.book__rating--wrapper {
+.book__rating {
   color: #fabf2a;
   margin-top: 4px;
   margin-bottom: 8px;
 }
-
 .book__price--strikethrough {
   text-decoration: line-through;
   color: #bfbfbf;
   margin-right: 6px;
 }
 
-/*
-
-    SKELETON
-
-*/
-.book__img--skeleton {
-  height: 360px;
+.book-skeleton {
+  display: flex;
+  flex-direction: column;
+}
+.book-skeleton__img {
   background-color: rgb(204, 204, 204);
   border-radius: 2px;
 }
-
-.book__title--skeleton,
-.book__rating--skeleton,
-.book__price--skeleton {
-  background-color: rgb(223, 223, 223);
-  margin-top: 8px;
-  border-radius: 1px;
-}
-
-.book__title--skeleton {
+.book-skeleton__title {
   height: 22px;
 }
-
-.book__rating--skeleton {
+.book-skeleton__rating {
   width: 40%;
   height: 18px;
 }
-
-.book__price--skeleton {
+.book-skeleton__price {
   width: 70%;
   height: 18px;
+}
+.book-skeleton__title, .book-skeleton__rating, .book-skeleton__price {
+  background-color: rgb(223, 223, 223);
+  margin-top: 8px;
+  border-radius: 1px;
 }
 
 /* 
@@ -83,13 +69,13 @@
 */
 @media screen and (max-width: 1200px) {
   .book__img--wrapper,
-  .book__img--skeleton {
+  .book__skeleton--img {
     height: 25vw;
   }
 }
 @media screen and (max-width: 576px) {
   .book__img--wrapper,
-  .book__img--skeleton {
+  .book__skeleton--img {
     height: 55vw;
   }
   .book__img {
