--- a/src/css/components/BooksGrid.css
+++ b/src/css/components/BooksGrid.css
@@ -1,7 +1,7 @@
 .books-grid {
   display: flex;
   flex-wrap: wrap;
-  margin: -24px -24px;
+  margin: -24px;
 }
 .books-grid .book__wrapper {
   padding: 24px;
@@ -12,7 +12,7 @@
   .books-grid {
     margin: -16px -8px;
   }
-  .book__wrapper {
+  .books-grid .book__wrapper {
     padding: 16px 8px;
   }
 }
