--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,4 +1,5 @@
 @use 'variables';
+@use 'layout';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
@@ -25,62 +26,6 @@ select,
 textarea,
 button {
   font-family: inherit;
-}
-
-/*
-
-  LAYOUT
-
-*/
-
-.container {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1200px;
-  padding-right: 5%;
-  padding-left: 5%;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -16px;
-  margin-left: -16px;
-}
-
-.col {
-  position: relative;
-  width: 100%;
-  min-height: 1px;
-  padding-right: 16px;
-  padding-left: 16px;
-}
-
-.fc {
-  flex-direction: column;
-}
-
-.aic {
-  align-items: center;
-}
-
-.jcsb {
-  justify-content: space-between;
-}
-
-.text--left {
-  text-align: left !important;
-}
-
-.text--center {
-  text-align: center;
-}
-
-.row--center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 /* 
