--- a/src/css/pages/Home/Home.css
+++ b/src/css/pages/Home/Home.css
@@ -1,4 +1,5 @@
-:is(#home section, #landing) > .container {
+#home section > .container,
+#landing > .container {
   padding-top: 48px;
   padding-bottom: 48px;
 }
