--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,6 +22,16 @@
   padding-left: 16px;
 }
 
+.df {
+  display: flex;
+}
+
+.dfa {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .fc {
   flex-direction: column;
 }
