--- a/src/css/pages/Cart/Cart.css
+++ b/src/css/pages/Cart/Cart.css
@@ -1,22 +1,72 @@
+#cart {
+  min-height: calc(100vh - 92px - 220px);
+}
+#cart h2 {
+  text-align: left;
+  font-size: 36px;
+}
+
+.cart__header {
+  margin-top: 16px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: #7342d6;
+  color: white;
+  font-size: 1.1rem;
+  padding: 12px 16px;
+}
+
+.cart__contents {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.cart__empty {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+.cart__empty--message {
+  margin: 48px 0 24px;
+  font-size: 1.25rem;
+}
+.cart__empty--img {
+  max-width: 320px;
+  object-fit: contain;
+}
+.cart__empty--btn {
+  padding-left: 48px;
+  padding-right: 48px;
+}
+
+.mobile {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .desktop {
+    display: none !important;
+  }
+  .mobile {
+    display: block !important;
+  }
+}
+@media screen and (max-width: 576px) {
+  .cart__header {
+    grid-template-columns: 2fr 3fr 1fr;
+  }
+}
 .cart-item {
   padding: 24px 0;
   border-bottom: 1px solid gray;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
-
-/* INFO */
-.cart-item .img-and-description {
-  display: flex;
-}
-
-.quantity-and-title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .cart-item__img {
   grid-column: 2/3;
   object-fit: contain;
@@ -24,57 +74,40 @@
   border-radius: 8px;
   margin-right: 20px;
 }
-
-.cart-item__description {
+.cart-item__description.desktop {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
-
 .cart-item__title {
   font-size: 1.25rem;
 }
-
+.cart-item__title.mobile {
+  margin-bottom: 16px;
+  text-align: center;
+}
 .cart-item__price {
   margin-top: 12px;
   font-weight: bold;
 }
-
-.cart-item__remove-btn {
-  border: none;
-  background-color: white;
-  margin-top: 8px;
-  padding: 4px 4px 4px 0;
-  display: inline;
-  text-align: left;
-  color: crimson;
-  font-weight: 500;
-  font-size: 0.8rem;
-}
-
-/* QUANTITY */
 .cart-item__quantity {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.btn.adjust-quantity {
+.cart-item__quantity .btn.adjust-quantity {
   margin-bottom: 0;
   border-radius: 50%;
   width: 40px;
   height: 40px;
   padding: 0;
 }
-
-.current-quantity {
+.cart-item__quantity .current-quantity {
   font-weight: bold;
   width: 50px;
   text-align: center;
 }
-
-/* PRICE */
 .cart-item__total-price {
   padding-right: 16px;
   display: flex;
@@ -83,41 +116,78 @@
   font-weight: bold;
 }
 
-/*
-
-    Totals
-
-*/
+@media screen and (max-width: 576px) {
+  .cart-item {
+    grid-template-columns: 2fr 3fr 1fr;
+  }
+  .cart-item__img {
+    width: 75%;
+    max-width: 160px;
+  }
+  .cart-item__description {
+    display: none;
+  }
+  .cart-item__total-price {
+    padding-right: 0;
+  }
+  .cart-item .current-quantity {
+    width: 40px;
+  }
+  .cart-item .btn.adjust-quantity {
+    width: 32px;
+    height: 32px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .cart-item__title {
+    font-size: 18px;
+  }
+}
 .totals {
   display: flex;
   justify-content: flex-end;
   margin-top: 32px;
 }
-
 .totals__row {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
 }
-
 .totals__row:nth-child(3) {
   font-weight: 900;
 }
-
 .totals .btn {
   margin-bottom: 32px;
 }
 
-/* 
-
-    CONFIRM REMOVE MODAL
-
-*/
 .confirm-remove-modal {
   display: grid;
   grid-template-columns: 1fr 2fr;
   max-width: 600px;
   column-gap: 20px;
+}
+.confirm-remove-modal img {
+  width: 100%;
+  object-fit: contain;
+}
+.confirm-remove-modal .text-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.confirm-remove-modal .btns {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+.confirm-remove-modal .btns .cancel-btn {
+  font-size: 1rem;
+  background-color: gray;
+}
+.confirm-remove-modal .btns .remove-btn {
+  font-size: 1rem;
+  background-color: #c14953;
 }
 
 .fade-in .confirm-remove-modal {
@@ -132,76 +202,13 @@
   transition: transform 300ms ease-in-out;
 }
 
-.confirm-remove-modal img {
-  width: 100%;
-  object-fit: contain;
-}
-
-.confirm-remove-modal .text-content {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.confirm-remove-modal .btns {
-  margin-top: 40px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.confirm-remove-modal .cancel-btn {
-  font-size: 1rem;
-  background-color: gray;
-}
-
-.confirm-remove-modal .remove-btn {
-  font-size: 1rem;
-  background-color: #c14953;
-}
-
-.mobile-only {
-  display: none;
-}
-
 @media screen and (max-width: 576px) {
-  .cart-item,
-  .cart__header {
-    grid-template-columns: 2fr 3fr 1fr;
-  }
-  .cart-item .cart-item__img {
-    width: 75%;
-    max-width: 160px;
-  }
-  .cart-item .current-quantity {
-    width: 40px;
-  }
-  .cart-item__title.mobile-only {
-    display: block;
-    text-align: center;
-    margin: 0 0 12px 0;
-  }
-  .cart-item__description {
-    display: none;
-  }
-  .cart-item__title {
-    text-align: center;
-    width: 100%;
-    font-size: 1rem;
-  }
-  .btn.adjust-quantity {
-    width: 32px;
-    height: 32px;
-  }
   .confirm-remove-modal h2 {
     font-size: 20px;
   }
   .confirm-remove-modal .btn {
     font-size: 14px;
     padding: 8px 24px;
-  }
-  .cart-item__total-price {
-    padding-right: 0;
   }
 }
 @media screen and (max-width: 480px) {
