--- a/src/scss/pages/Cart/Cart.scss
+++ b/src/scss/pages/Cart/Cart.scss
@@ -1,236 +1,6 @@
 @use '../../variables';
-@use 'cartLayout';
-
-.cart-item {
-  padding: 24px 0;
-  border-bottom: 1px solid gray;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-
-  .img-and-description {
-    display: flex;
-  }
-}
-
-.quantity-and-title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.cart-item__img {
-  grid-column: 2 / 3;
-  object-fit: contain;
-  width: 100px;
-  border-radius: 8px;
-  margin-right: 20px;
-}
-
-.cart-item__description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.cart-item__title {
-  font-size: 1.25rem;
-}
-
-.cart-item__price {
-  margin-top: 12px;
-  font-weight: bold;
-}
-
-.cart-item__remove-btn {
-  border: none;
-  background-color: white;
-  margin-top: 8px;
-  padding: 4px 4px 4px 0;
-  display: inline;
-  text-align: left;
-  color: crimson;
-  font-weight: 500;
-  font-size: 0.8rem;
-}
-
-/* QUANTITY */
-
-.cart-item__quantity {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn.adjust-quantity {
-  margin-bottom: 0;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  padding: 0;
-}
-
-.current-quantity {
-  font-weight: bold;
-  width: 50px;
-  text-align: center;
-}
-
-/* PRICE */
-
-.cart-item__total-price {
-  padding-right: 16px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  font-weight: bold;
-}
-
-/*
-
-    Totals
-
-*/
-
-.totals {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 32px;
-}
-
-.totals__row {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.totals__row:nth-child(3) {
-  font-weight: 900;
-}
-
-.totals .btn {
-  margin-bottom: 32px;
-}
-
-/* 
-
-    CONFIRM REMOVE MODAL
-
-*/
-
-.confirm-remove-modal {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  max-width: 600px;
-  column-gap: 20px;
-}
-
-.fade-in .confirm-remove-modal {
-  /* slide in animation */
-  transform: translateY(10%);
-  transition: transform 300ms ease-in-out;
-}
-
-.visible .confirm-remove-modal {
-  /* slide in animation */
-  transform: translateX(0);
-  transition: transform 300ms ease-in-out;
-}
-
-.confirm-remove-modal img {
-  width: 100%;
-  object-fit: contain;
-}
-
-.confirm-remove-modal .text-content {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.confirm-remove-modal .btns {
-  margin-top: 40px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.confirm-remove-modal .cancel-btn {
-  font-size: 1rem;
-  background-color: gray;
-}
-
-.confirm-remove-modal .remove-btn {
-  font-size: 1rem;
-  background-color: #c14953;
-}
-
-.mobile-only {
-  display: none;
-}
-
-@media screen and (max-width: 576px) {
-  .cart-item,
-  .cart__header {
-    grid-template-columns: 2fr 3fr 1fr;
-  }
-
-  .cart-item .cart-item__img {
-    width: 75%;
-    max-width: 160px;
-  }
-
-  .cart-item .current-quantity {
-    width: 40px;
-  }
-
-  .cart-item__title.mobile-only {
-    display: block;
-    text-align: center;
-    margin: 0 0 12px 0;
-  }
-
-  .cart-item__description {
-    display: none;
-  }
-
-  .cart-item__title {
-    text-align: center;
-    width: 100%;
-    font-size: 1rem;
-  }
-
-  .btn.adjust-quantity {
-    width: 32px;
-    height: 32px;
-  }
-
-  .confirm-remove-modal h2 {
-    font-size: 20px;
-  }
-
-  .confirm-remove-modal .btn {
-    font-size: 14px;
-    padding: 8px 24px;
-  }
-
-  .cart-item__total-price {
-    padding-right: 0;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .confirm-remove-modal {
-    padding: 16px;
-  }
-
-  .confirm-remove-modal h2 {
-    font-size: 18px;
-  }
-
-  .confirm-remove-modal .btn {
-    font-size: 12px;
-    padding: 8px 20px;
-  }
-}
+@use 'cartLayout'; 
+// above two must be imported first !!
+@use 'cartItem';
+@use 'cartTotals';
+@use 'cartConfirmRemoveModal';
