--- a/src/scss/pages/Cart/_cartLayout.scss
+++ b/src/scss/pages/Cart/_cartLayout.scss
@@ -1,3 +1,4 @@
+@use '../../variables';
 
 #cart {
   min-height: calc(100vh - variables.$nav-height - variables.$footer-height);
@@ -22,29 +23,49 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+}
 
-  .cart__empty {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 48px;
-    padding-bottom: 48px;
+.cart__empty {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 48px;
+  padding-bottom: 48px;
 
-    &--message {
-      margin: 48px 0 24px;
-      font-size: 1.25rem;
-    }
-  
-    &--img {
-      max-width: 320px;
-      object-fit: contain;
-    }
+  &--message {
+    margin: 48px 0 24px;
+    font-size: 1.25rem;
+  }
 
-    &--btn {
-      padding-left: 48px;
-      padding-right: 48px;
-    }
+  &--img {
+    max-width: 320px;
+    object-fit: contain;
+  }
+
+  &--btn {
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
+
+.mobile {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .desktop {
+    display: none !important;
+  }
+
+  .mobile {
+    display: block !important;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .cart__header {
+    grid-template-columns: 2fr 3fr 1fr;
   }
 }
